only center horizontaly to prevent hiding the top should the browser window be too small

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -6,9 +6,7 @@ body {
     width: 1024px; 
     height: 768px; 
     position: absolute;
-    top: 50%;
     left: 50%;
-    margin-top: -364px;
     margin-left: -512px; 
 }
 
